2010-04-17  Karel Klíč  <kklic@redhat.com>

	* src/libwikt/strdup_trimmed.c (strdup_trimmed): Use xmalloc.

	* src/libwikt/languages.h: Include stdbool.h.

	* configure.ac: Added AC_PROG_CC.

	* src/libwikt/utils.c (xasprintf): New function based on
	ABRT's xasprintf.
	(xstrdup, xfread, xfclose, xftell, xfseek): New function.
	(xmalloc): Moved from malloc_safe.c

	* src/libwikt/malloc_safe.h: Contents of this file was
	moved to utils.h. Function malloc_safe was renamed to xmalloc.
	* src/libwikt/malloc_safe.c: Deleted.
	* src/libwikt/fclose_safe.c: Deleted. Its content moved to utils.c.
	* src/libwikt/fclose_safe.h: Deleted. Its content moved to utils.h.

	* src/libwikt/wiktionary/wiktionary.h: Moved to
	src/libwikt/dictionary.h and completely reworked.

	* src/libwikt/dictionary.cpp: New file.

2010-04-16  Karel Klíč  <kklic@redhat.com>

	* src/libwikt/malloc_safe.h: Fix indentation.
	* src/libwikt/malloc_safe.c: Likewise.
	* src/app/wikisourcecacheitem.cpp: Likewise.
	* src/libwikt/languages.c: Likewise.

	* src/app/optionsdialog.cpp (OptionsDialog): Rewrite the language
	list creation code to support non-ASCII letters and variable number
	of first letters.
	Fix indentation.
	(OptionsDialog): implement translation visibility settings load with the
	new language system.
	(saveSettings): implement translation visibility settings save with the
	new language system.

	* .dir-locals.el: New file; contains global Emacs settings
	for Wikt.

	* po/POTFILES.in: New file; start with one testing file.

	* po/LINGUAS: New file; start with Czech localization only.

	* po/Makevars: New file with gettext configuration.

	* README: New section Git Repository.

	* src/libwikt/languages.h: Prefer term ASCII/UTF-8 "encoding"
	over "format".
	Make languages structure available for applications.
	Delete trailing whitespace.
	Delete emacs custom settings.

2010-03-16  Karel Klíč  <kklic@redhat.com>

	* src/libwikt/urlutils.cpp (toUrl): Use 'x' as the escape character.