@@ -25,6 +25,7 @@ PKG_CHECK_MODULES([QTXML], [QtXml])
 PKG_CHECK_MODULES([QTWEBKIT], [QtWebKit])
 PKG_CHECK_MODULES([QTSVG], [QtSvg])
 PKG_CHECK_MODULES([PHONON], [phonon])
+PKG_CHECK_MODULES([CISOCODES], [ciso-codes])
 
 AC_SUBST(DL_LIBS, -ldl)
 AC_CONFIG_HEADERS([config.h])
